Partially fixed Issue #1. Organized file structure. Moved JS into external file. Added a little padding to footer for more white space. Need to add some transition to accordion and still need to add universal button for accordion.

--- a/styles/base.css
+++ b/styles/base.css
@@ -108,6 +108,10 @@ a:hover:before, a:focus:before, a:active:before {
   right: 0;
 }
 
+footer{
+  padding: 50px 0;
+}
+
 /* SMALL SCREENS */
 @media screen and (max-width : 1000px) {
     .wrapper {
